style: more attempts at overflow fixes

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -5,6 +5,8 @@
 
 html {
     position: relative;
+    max-height: 100%;
+    max-width: 100vw;
 }
 
 // default body styles
